Create bottom navigation and wire up dummy fragments for all menu options

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Authcoin Android</string>
+    <string name="app_name">Authcoin</string>
+    <string name="identity">Identity</string>
+    <string name="challenges">Challenges</string>
+    <string name="trusted_parties">Trust</string>
+    <string name="title_activity_challenge">ChallengeActivity</string>
+    <string name="action_settings">Settings</string>
 </resources>
