--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="trusted_parties">Trust</string>
     <string name="title_activity_challenge">ChallengeActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="create_identity_button">Create identity</string>
+    <string name="password_confirm">Confirm password</string>
+    <string name="password">Password</string>
+    <string name="wallet_address">Wallet Address:</string>
+    <string name="delete_identity">Delete identity</string>
 </resources>
