--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="trusted_parties">Trust</string>
     <string name="title_activity_challenge">ChallengeActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="no_identity_yet">You don\'t have an identity, yet.</string>
+    <string name="no_identity_yet_desc">Create your identity by providing a password for your personal wallet.</string>
     <string name="create_identity_button">Create identity</string>
     <string name="password_confirm">Confirm password</string>
     <string name="password">Password</string>
