--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="password">Password</string>
     <string name="wallet_address">Wallet Address:</string>
     <string name="delete_identity">Delete identity</string>
+    <string name="unspent_output">Unspent output:</string>
 </resources>
