--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="create_identity_button">Create identity</string>
     <string name="password_confirm">Confirm password</string>
     <string name="password">Password</string>
-    <string name="wallet_address">Wallet Address:</string>
+    <string name="wallet_address">Wallet address:</string>
     <string name="delete_identity">Delete identity</string>
     <string name="unspent_output">Unspent output:</string>
 </resources>
