--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="password_confirm">Confirm password</string>
     <string name="password">Password</string>
     <string name="wallet_address">Wallet address:</string>
+    <string name="wallet_address_copied">Wallet address copied</string>
     <string name="delete_identity">Delete identity</string>
     <string name="unspent_output">Unspent output:</string>
 </resources>
