Wallet/Identity fragments refactor, validate password in WelcomeFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,13 @@
     <string name="trusted_parties">Trust</string>
     <string name="title_activity_challenge">ChallengeActivity</string>
     <string name="action_settings">Settings</string>
-    <string name="no_identity_yet">You don\'t have an identity, yet.</string>
-    <string name="no_identity_yet_desc">Create your identity by providing a password for your personal wallet.</string>
-    <string name="create_identity_button">Create identity</string>
+    <string name="no_wallet_yet">You don\'t have a wallet, yet.</string>
+    <string name="no_wallet_yet_desc">Create your wallet by providing a password for it.</string>
+    <string name="create_wallet_button">Create wallet</string>
     <string name="password_confirm">Confirm password</string>
     <string name="password">Password</string>
     <string name="wallet_address">Wallet address:</string>
     <string name="wallet_address_copied">Wallet address copied</string>
-    <string name="delete_identity">Delete identity</string>
+    <string name="delete_wallet">Delete wallet</string>
     <string name="unspent_output">Unspent output:</string>
 </resources>
