Add challengeType selection to NewChallengeFragment. Add ChallengeType enum. Get required fields for sending CR to BC.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="new_challenge">Send a new challenge</string>
     <string name="new_challenge_desc">Some description for sending a new challenge</string>
     <string name="your_identity">Your identity</string>
+    <string name="challenge_type">Challenge type</string>
     <string name="challenge_target">Challenge target identity</string>
     <string name="send_challenge">Send challenge</string>
 </resources>
