--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,11 @@
     <string name="challenge_type">Challenge type</string>
     <string name="challenge_target">Challenge target identity</string>
     <string name="send_challenge">Send challenge</string>
+    <string name="wants_to_verify_your_identity">wants to verify your identity.</string>
     <string name="cancel">Cancel</string>
     <string name="select_challenge">Select challenge</string>
     <string name="select_identity">Select identity</string>
+    <string name="invalid_response">Invalid response</string>
+    <string name="sign_response">Sign response</string>
+    <string name="fulfill">Fulfill</string>
 </resources>
